IDEMPIERE-6997 Extension Management Form: Add File: URL support